--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -5,9 +5,10 @@
       users_accounts:
         - name: backup_user
     - role: cimon-io.ruby
+      ruby_user: backup_user
       ruby_versions:
         - "2.3.3"
-    - role: backup
+    - role: ansible-role-backup
       backup_user: backup_user
   vars_files:
     - ./vars.yml
