travis default user

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
     - python-pip
 
 install:
+  - rvm install 2.3.3
   - pip install ansible
   - ansible --version
 
@@ -17,9 +18,6 @@ script:
   - echo -e '[local]\nlocalhost ansible_connection=local' > inventory
   - ansible-galaxy install -r tests/requirements.yml -p ./tests/roles
   - ansible-playbook tests/playbook.yml -i inventory --syntax-check
-  - sudo -u deploy ruby --version
-  - sudo -u deploy which gem
-  - sudo -u deploy rbenv versions
   - ansible-playbook tests/playbook.yml -i inventory
 
 notifications:
