--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -1,13 +1,13 @@
 ---
 - hosts: all
   roles:
-    - role: cimon-io.users
-      users_accounts:
-        - name: deploy
-    - role: cimon-io.ruby
-      ruby_global_gems: []
-      ruby_versions:
-        - "2.3.3"
+    #    - role: cimon-io.ruby
+    #      ruby_user: "{{ ansible_env.USER }}"
+    #      ruby_group: "{{ ansible_env.USER }}"
+    #      ruby_global_gems: []
+    #      ruby_versions:
+    #        - "2.3.3"
     - role: ansible-role-backup
+      backup_user: "{{ ansible_env.USER }}"
   vars_files:
     - ./vars.yml
