--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -28,12 +28,10 @@
   with_items:
     - "{{ backup_models }}"
 
-- name: "preconfigure cron"
-  cron:
-    name:  PATH
-    env:   yes
-    value: "{{ ansible_env.PATH }}"
-    user:  "{{ backup_user }}"
+- name: "find backup file"
+  shell: "/bin/bash -lc 'which backup'"
+  become_user: "{{ backup_user }}"
+  register: backup_exec
 
 - name: "configure cron"
   cron:
@@ -43,7 +41,7 @@
     day:     "{{ item.cron.day     | default(omit) }}"
     weekday: "{{ item.cron.weekday | default(omit) }}"
     user:    "{{ backup_user }}"
-    job:     "backup perform --trigger {{ item.name }} --config-file {{ backup_root_path }}/config.rb"
+    job:     "{{ backup_exec.stdout }} perform --trigger {{ item.name }} --config-file {{ backup_root_path }}/config.rb"
   with_items:
     - "{{ backup_models }}"
   when: item.cron is defined
